Added a Switch based on JavaFX CheckBox

--- a/build.gradle
+++ b/build.gradle
@@ -86,6 +86,11 @@ task Demo(type: JavaExec) {
     classpath = sourceSets.main.runtimeClasspath
 }
 
+task Test(type: JavaExec) {
+    main = "eu.hansolo.applefx.TestLauncher"
+    classpath = sourceSets.main.runtimeClasspath
+}
+
 
 // Fix problems with loading resources
 sourceSets {
